--- a/OpenMarket/OpenMarket/Controller/ProductTableViewCell.xib
+++ b/OpenMarket/OpenMarket/Controller/ProductTableViewCell.xib
@@ -10,77 +10,79 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ProductTableViewCell" rowHeight="60" id="KGk-i7-Jjw" customClass="ProductTableViewCell" customModule="OpenMarket" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="371" height="60"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ProductTableViewCell" rowHeight="59" id="KGk-i7-Jjw" customClass="ProductTableViewCell" customModule="OpenMarket" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="484" height="59"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="371" height="60"/>
+                <rect key="frame" x="0.0" y="0.0" width="484" height="59"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="iyM-7Y-Rov">
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="fxl-ic-O1X">
                         <rect key="frame" x="5" y="5" width="50" height="50"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="50" id="VTg-JE-7qc"/>
-                            <constraint firstAttribute="width" constant="50" id="mac-v8-RN3"/>
+                            <constraint firstAttribute="width" constant="50" id="Pgt-PO-ZGY"/>
+                            <constraint firstAttribute="height" constant="50" id="uSI-gD-5rt"/>
                         </constraints>
                     </imageView>
-                    <stackView opaque="NO" contentMode="scaleToFill" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="46B-4P-hcu">
-                        <rect key="frame" x="60" y="5" width="306" height="24.5"/>
+                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="MdD-IY-hSa">
+                        <rect key="frame" x="65" y="5" width="409" height="41"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Mac mini1111121123231312131" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="d3X-3X-vsb">
-                                <rect key="frame" x="0.0" y="2" width="205" height="20.5"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="750" verticalHuggingPriority="251" horizontalCompressionResistancePriority="1000" text="잔여수량 : 148" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nVE-wg-EYj">
-                                <rect key="frame" x="205" y="2" width="101" height="20.5"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                        </subviews>
-                    </stackView>
-                    <stackView opaque="NO" contentMode="scaleToFill" spacing="7" translatesAutoresizingMaskIntoConstraints="NO" id="U4O-fw-h4K">
-                        <rect key="frame" x="60" y="34.5" width="306" height="20.5"/>
-                        <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="750" verticalHuggingPriority="251" text="USD 1500" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="buc-bL-Kxm">
-                                <rect key="frame" x="0.0" y="0.0" width="77" height="20.5"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="USD 1000" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gmN-FH-6Ua">
-                                <rect key="frame" x="84" y="0.0" width="222" height="20.5"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <stackView opaque="NO" contentMode="scaleToFill" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="SwV-KZ-DZn">
+                                <rect key="frame" x="0.0" y="0.0" width="409" height="20.5"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hKM-2o-tBB">
+                                        <rect key="frame" x="0.0" y="0.0" width="351.5" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ri2-50-X0k">
+                                        <rect key="frame" x="367.5" y="0.0" width="41.5" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
+                            <stackView opaque="NO" contentMode="scaleToFill" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="cr2-JB-Jp0">
+                                <rect key="frame" x="0.0" y="20.5" width="409" height="20.5"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="83x-fV-Aeo">
+                                        <rect key="frame" x="0.0" y="0.0" width="41.5" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5CG-UY-hZo">
+                                        <rect key="frame" x="46.5" y="0.0" width="362.5" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
                         </subviews>
                     </stackView>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="U4O-fw-h4K" firstAttribute="top" secondItem="46B-4P-hcu" secondAttribute="bottom" constant="5" id="2ci-JB-zMa"/>
-                    <constraint firstItem="iyM-7Y-Rov" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="5" id="Cts-Vk-pUh"/>
-                    <constraint firstAttribute="bottom" secondItem="U4O-fw-h4K" secondAttribute="bottom" constant="5" id="Fiy-rw-eQQ"/>
-                    <constraint firstItem="iyM-7Y-Rov" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="HRC-r6-9iX"/>
-                    <constraint firstItem="46B-4P-hcu" firstAttribute="leading" secondItem="iyM-7Y-Rov" secondAttribute="trailing" constant="5" id="LYy-NI-PKh"/>
-                    <constraint firstAttribute="trailing" secondItem="U4O-fw-h4K" secondAttribute="trailing" constant="5" id="b3X-Y7-q68"/>
-                    <constraint firstAttribute="bottom" secondItem="iyM-7Y-Rov" secondAttribute="bottom" constant="5" id="cl0-JL-Qiy"/>
-                    <constraint firstItem="U4O-fw-h4K" firstAttribute="leading" secondItem="iyM-7Y-Rov" secondAttribute="trailing" constant="5" id="fCh-HJ-3Na"/>
-                    <constraint firstItem="46B-4P-hcu" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="qmu-GZ-LIA"/>
-                    <constraint firstAttribute="trailing" secondItem="46B-4P-hcu" secondAttribute="trailing" constant="5" id="xlN-tt-EN4"/>
+                    <constraint firstAttribute="bottom" secondItem="fxl-ic-O1X" secondAttribute="bottom" constant="5" id="PVu-IB-xzx"/>
+                    <constraint firstItem="fxl-ic-O1X" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="5" id="SWG-JO-nwK"/>
+                    <constraint firstItem="fxl-ic-O1X" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="TaB-8V-byX"/>
+                    <constraint firstAttribute="bottom" secondItem="MdD-IY-hSa" secondAttribute="bottom" constant="5" id="Ufm-av-ZNM"/>
+                    <constraint firstItem="MdD-IY-hSa" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="g8E-A1-9a6"/>
+                    <constraint firstAttribute="trailing" secondItem="MdD-IY-hSa" secondAttribute="trailing" constant="10" id="uKz-eN-edR"/>
+                    <constraint firstItem="MdD-IY-hSa" firstAttribute="leading" secondItem="fxl-ic-O1X" secondAttribute="trailing" constant="10" id="wfm-B8-CSz"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
-                <outlet property="discountedPriceLabel" destination="buc-bL-Kxm" id="mRz-Ll-6At"/>
-                <outlet property="priceLabel" destination="gmN-FH-6Ua" id="ufJ-u6-AR5"/>
-                <outlet property="stockLabel" destination="nVE-wg-EYj" id="Tjq-RG-waN"/>
-                <outlet property="thumbnail" destination="iyM-7Y-Rov" id="9iV-1h-nIV"/>
-                <outlet property="titleLabel" destination="d3X-3X-vsb" id="7ZM-nq-msb"/>
+                <outlet property="discountedPriceLabel" destination="83x-fV-Aeo" id="X3R-zQ-OfZ"/>
+                <outlet property="priceLabel" destination="5CG-UY-hZo" id="Opv-Jh-vgR"/>
+                <outlet property="stockLabel" destination="ri2-50-X0k" id="7gy-dM-iXY"/>
+                <outlet property="thumbnail" destination="fxl-ic-O1X" id="Mym-hS-ODz"/>
+                <outlet property="titleLabel" destination="hKM-2o-tBB" id="Jpn-7K-alr"/>
             </connections>
-            <point key="canvasLocation" x="393" y="174"/>
+            <point key="canvasLocation" x="253.62318840579712" y="124.21875"/>
         </tableViewCell>
     </objects>
 </document>
